# ai_usage_mon

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_api.py  test_boot.py  test_cache.py  test_ccusage.py  test_config.py  test_models.py  test_oauth_usage.py  test_ui.py
usage_monitor/: __init__.py  __main__.py  api.py  app.py  cache.py  ccusage_fallback.py  config.py  models.py  oauth_usage.py  ui.py
