[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usage-monitor"
version = "0.1.0"
description = "Real-time TUI for monitoring Claude and Codex API usage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dylan" }]
keywords = ["claude", "codex", "usage", "tui", "monitoring"]
dependencies = [
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
usage-monitor = "usage_monitor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["usage_monitor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=usage_monitor --cov-report=term-missing"

[tool.coverage.run]
omit = ["usage_monitor/__main__.py", "usage_monitor/app.py"]
